--- a/app.json
+++ b/app.json
@@ -36,6 +36,11 @@
       "required": false
     }
   },
+  "UPDATE_CHANNEL": {
+      "description": "For Force Subscribe. Paste your Update channel USERNAME (without @)..",
+      "value": "",
+      "required": false
+    },
   "addons": [
     {
       "plan": "heroku-postgresql",
