--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,9 @@ Pillow
 ffmpeg-python
 ffmpeg
 sqlalchemy==1.3.23
-pyrogram
+pyrogram==1.0.7
 requests
 psycopg2-binary
 feedparser
 tgcrypto
 youtube-dl
-git+git://github.com/google/chatbase-python.git
