--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ ffmpeg-python
 ffmpeg
 sqlalchemy==1.3.23
 pyrogram==1.0.7
-requests
+Flask==1.1.1
+requests==2.24.0
 psycopg2-binary
 feedparser
 tgcrypto
