--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ numpy
 Pillow
 ffmpeg-python
 ffmpeg
-sqlalchemy==1.3.23
-pyrogram==1.0.7
-Flask==1.1.1
-requests==2.24.0
+sqlalchemy
+pyrogram
+Flask
+requests
 psycopg2-binary
 feedparser
 tgcrypto
