--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "downloader"
   ],
 
-  "repository": "https://github.com/satyushree/zee5dlrobot",
+  "repository": "https://github.com/vansh876/zee5dlrobot",
   
   "env": {
     "WEBHOOK": {
@@ -48,7 +48,7 @@
   "formation": {
     "worker": {
       "quantity": 1,
-      "size": "free"
+      "size": "eco"
     }
   }
 }
